# backend/src/swagger/openapi.yaml
@@ -1,7 +1,6 @@
 openapi: 3.0.0
 info:
-  description: |
-    This is a 42StackOverflow
+  description: This is a 42StackOverflow
   version: 1.0.0
   title: 42StackOverFlow
   termsOfService: "http://42Stack-Overflow.net"
@@ -441,6 +440,13 @@ paths:
       tags:
         - answer
       parameters:
+        - name: questionId
+          in: query
+          schema:
+            type: integer
+            format: int64
+          example: 1
+          required: true
         - name: answerId
           in: query
           schema:
@@ -480,17 +486,18 @@ paths:
       summary: 댓글을 생성합니다.
       tags:
         - comment
+      description: question comment 작성시 requestBody에 answerId 제외하고 사용
       requestBody:
         content:
           application/json:
             schema:
               properties:
-                questionId:
-                  type: integer
-                  format: int64
                 text:
                   type: string
                   example: "test question comment text"
+                questionId:
+                  type: integer
+                  format: int64
                 answerId:
                   type: integer
                   format: int64
@@ -508,11 +515,15 @@ paths:
       summary: 댓글을 업데이트합니다.
       tags:
         - comment
+      description: question comment 작성시 requestBody에 answerId 제외하고 사용
       requestBody:
         content:
           application/json:
             schema:
               properties:
+                text:
+                  type: string
+                  example: "test update question comment text"
                 commentId:
                   type: integer
                   format: int64
@@ -521,12 +532,10 @@ paths:
                   type: integer
                   format: int64
                   example: 1
-                text:
-                  type: string
-                  example: "test question comment text"
                 answerId:
                   type: integer
                   format: int64
+                  example: 1
               required:
                 - commnetId
                 - text
@@ -542,6 +551,20 @@ paths:
       tags:
         - comment
       parameters:
+        - name: questionId
+          in: query
+          schema:
+            type: integer
+            format: int64
+          example: 1
+          required: true
+        - name: answerId
+          in: query
+          schema:
+            type: integer
+            format: int64
+          example: 1
+          required: true
         - name: commentId
           in: query
           schema:
@@ -883,7 +906,3 @@ paths:
           description: OK
         "404":
           description: User doesn't exist
-
-externalDocs:
-  description: Find out more about Swagger
-  url: "http://swagger.io"
